# gmtk-2022

./: .gitignore  Cargo.toml  LICENSE  README.md  levels.tiled-project  levels.tiled-session
.github/workflows/: build-docs.yml  build.yml  ci.yml  prerelease.yml  release-gh-pages.yml  release-native.yml  release.yml  test.yml
assets/: credits.cds
assets/maps/: level0-0.tmx  level0-1.tmx  level0-2.tmx  level0.tmx  level1.tmx  level2-1.tmx  level_info.level-info  rewrite_test.tmx  spin_demo.tmx
assets/tilesets/: activator_tiles.tsx  graphics_tiles.tsx  level_tiles.tsx  logic_tiles.tsx  new_level_tiles.tsx
bevy_credits/: Cargo.toml
bevy_credits/src/: lib.rs
bevy_ecs_tilemap_cpu_anim/: Cargo.toml
bevy_ecs_tilemap_cpu_anim/src/: lib.rs
bevy_game/: Cargo.toml
bevy_game/assets/maps/: level0.tmx  level1-0.tmx  level1-1.tmx  level2.tmx  level_info.level-info  test_map.tmx
bevy_game/assets/tilesets/: level_tiles.tsx
bevy_game/src/: app.rs  level.rs  level_info.rs  lib.rs  main.rs  save.rs  special_tiles.rs
bevy_game/src/level/: asset.rs  components.rs  cpu_tile_animation.rs  loader.rs  mod.rs  resources.rs  special_tiles.rs  tile_animation.rs  tile_attributes.rs  tile_commands.rs  tile_def.rs
bevy_game/src/level/assets/: mod.rs  tileset_indexing.rs  tileset_type.rs
bevy_game/src/level/tile_decoder/: mod.rs  tile_animation.rs  tile_attributes.rs  tile_commands.rs
bevy_game/src/moveable/: events.rs  mod.rs  resources.rs  systems.rs
bevy_game/src/moveable/components/: decomposed_rotation.rs  direction.rs  mod.rs  moveable_state.rs
bevy_game/src/player/: components.rs  dice.rs  events.rs  mod.rs  resources.rs  systems.rs
bevy_game/src/states/: booting.rs  ingame.rs  loading.rs  main_menu.rs  mod.rs  spawning.rs  splash_screen.rs
bevy_game/src/tile/: components.rs  mod.rs  systems.rs
bevy_game/src/tile/components/: activatable_tile_data.rs  mod.rs  tile_state.rs
bevy_game/tiled_project/: dice_roll_layers.tiled-project  dice_roll_layers.tiled-session
bevy_game_bootstrap/: Cargo.toml  levels.tiled-project
bevy_game_bootstrap/assets/maps/: conveyor_demo.tmx  level0-0.tmx  level0-1.tmx  level0-2.tmx  level_info.level-info  multilayer_test.tmx  rewrite_test.tmx  rolling.tmx  test_level.tmx
bevy_game_bootstrap/assets/models/: Dice.glb
bevy_game_bootstrap/assets/tilesets/: activator_tiles.tsx  new_level_tiles.tsx
bevy_game_bootstrap/src/: main.rs
bevy_tiled/: Cargo.toml
bevy_tiled/src/: lib.rs  map_scheme.rs  tiled_map_asset.rs
bevy_tiled/src/tiled_ext/: deser_impl.rs  mod.rs
cube_rot/: Cargo.toml
cube_rot/src/: lib.rs
launchers/native/: Cargo.toml
launchers/native/src/: main.rs
launchers/wasm/: Cargo.toml
launchers/wasm/src/: main.rs
src/: config.rs  level_info.rs  lib.rs  save.rs
src/level/: mod.rs  resources.rs
src/moveable/: components.rs  events.rs  mod.rs  systems.rs
src/moveable/components/: moveable_state.rs
src/player/: components.rs  mod.rs  resources.rs  systems.rs
src/states/: booting.rs  credits.rs  ingame.rs  loading.rs  main_menu.rs  mod.rs  splash_screen.rs
src/tile/: components.rs  events.rs  mod.rs  systems.rs
