[package]
name = "my-game"
version = "0.7.0"
edition = "2021"

[workspace]
members = [
    "launchers/wasm",
    "launchers/native",
	"bevy_ecs_tilemap_cpu_anim", 
	"bevy_tiled", 
	"cube_rot",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# bevy deps
bevy = "0.8"
bevy_common_assets = { version = "0.3", features = ["json"] }
bevy_asset_loader = { version = "0.12", features = ["stageless", "dynamic_assets"] }
iyes_loopless = "0.7"
anyhow = "1"
bevy_ecs_tilemap = "0.7"
tiled = { version = "0.10", default-features = false }
bevy-inspector-egui = "0.12"
bevy_pkv = "0.5"
# Other deps
thiserror = "1"
serde = { version = "1", features = ["derive"] }
lazy_static = "1"
futures-lite = "1"
image = "0.24.3"
winit = "0.26.1"
# Internal deps
bevy_tiled = { path = "bevy_tiled" }
bevy_ecs_tilemap_cpu_anim = { path = "bevy_ecs_tilemap_cpu_anim" }
cube_rot = { path = "cube_rot" }

[target.'cfg(target_arch = "wasm")'.dependencies]
# Nothing

[target.'cfg(target_arch = "x86_64")'.dependencies]
bevy_framepace = "0.7.0"
clap = { version = "3", features = ["cargo"] }
bevy_mod_debugdump = "0.5"
