[package]
name = "project-dice-escape"
version = "0.8.0"
edition = "2021"

[workspace]
members = [
    "launchers/wasm",
    "launchers/native",
    "bevy_ecs_tilemap_cpu_anim", 
    "bevy_tiled", 
    "cube_rot",
]

[[bin]]
name="native-launcher-test"
path="launchers/native/src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# bevy deps
bevy = { workspace = true }
bevy_ecs_tilemap = { workspace = true }
bevy_common_assets = { version = "0.3", features = ["json"] }
bevy_asset_loader = { workspace = true, features = ["stageless", "dynamic_assets"] }
iyes_loopless = "0.7"
tiled = { workspace = true }
bevy-inspector-egui = { workspace = true }
bevy_pkv = "0.5"
# Other deps
anyhow = { workspace = true }
serde = { workspace = true, features = ["derive"] }
# Internal deps
bevy_tiled = { path = "bevy_tiled" }
bevy_ecs_tilemap_cpu_anim = { path = "bevy_ecs_tilemap_cpu_anim" }
cube_rot = { path = "cube_rot" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
# Nothing

# All those crates aren't included in wasm builds, because they are
# either not needed will blow up the size too much
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
bevy_framepace = "0.7.0"
clap = { version = "4", features = ["cargo", "derive"] }
bevy_mod_debugdump = "0.5"
winit = { version = "0.26.1", default-features = false }
image = "0.24.3"

[workspace.dependencies]
serde = "1"
anyhow = "1"
bevy = "0.8"
bevy_ecs_tilemap = "0.7"
bevy-inspector-egui = "0.13"
tiled = { version = "0.10", default-features = false }
bevy_asset_loader = { version = "0.12" }