[package]
name = "game-lib"
version = "0.9.14"
edition = "2021"

[workspace]
members = [
    "launchers/wasm",
    "launchers/native",
    "bevy_ecs_tilemap_cpu_anim",
    "cube_rot",
]

[[bin]]
doc = false
name="local-launcher"
path="launchers/native/src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# bevy deps
bevy = { workspace = true }
bevy_ecs_tilemap = { workspace = true }
bevy_common_assets = { version = "0.6", features = ["json"] }
bevy_asset_loader = { version = "0.16", features = ["standard_dynamic_assets"] }
bevy_editor_pls = "0.4"
bevy_pkv = "0.7"
bevy_framepace = "0.12"
# Other deps
anyhow = { workspace = true }
serde = { workspace = true, features = ["derive"] }
# Internal deps
bevy_ecs_tilemap_cpu_anim = { path = "bevy_ecs_tilemap_cpu_anim" }
cube_rot = { path = "cube_rot" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
# Nothing

# All those crates aren't included in wasm builds, because they are
# either not needed will blow up the size too much
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
clap = { version = "4", features = ["cargo", "derive"] }
winit = { version = "0.28", default-features = false }
image = "0.24.5"

[workspace.dependencies]
serde = "1"
anyhow = "1"
bevy = "0.10"
bevy_ecs_tilemap = "0.10"