[package]
name = "bevy_ecs_tilemap_cpu_anim"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Bevy deps
bevy = { workspace = true }
bevy_ecs_tilemap = { workspace = true }
bevy-inspector-egui = { workspace = true }