[package]
name = "bevy_game"
version = "0.7.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# bevy deps
bevy = "0.8"
bevy_asset_loader = { version = "0.12.0", features = ["stageless", "dynamic_assets"] }
iyes_loopless = "0.7"
anyhow = "1.0.4"
bevy_ecs_tilemap = "0.7.0"
tiled = { version = "0.10.2", default-features = false }
bevy-inspector-egui = "0.12.1"
# Other deps
thiserror = "1"
serde = "1"
serde_json = "1"
lazy_static = "1"
futures-lite = "1"
# Internal deps
bevy_ecs_tilemap_cpu_anim = { path = "../bevy_ecs_tilemap_cpu_anim" }

[target.'cfg(target_arch = "wasm")'.dependencies]
# Nothing

[target.'cfg(target_arch = "x86_64")'.dependencies]
bevy_framepace = "0.5.0"
