[package]
name = "bevy_game_bootstrap"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3", features = ["cargo"] }
bevy_mod_debugdump = "0.4"
bevy_game = { path = "../bevy_game" }

[[bin]]
name = "game"
path = "src/main.rs"
