[package]
name = "bevy_tiled"
description = "A set of useful tools for gluttony to load maps"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy_asset_loader = { version = "0.12.1", features = ["stageless", "dynamic_assets"] }
anyhow = "1.0.65"
thiserror = "1"
serde = "1"
bevy = "0.8"
bevy_ecs_tilemap = "0.8.0"
tiled = "0.10.2"
bevy_ecs_tilemap_cpu_anim = { path = "../bevy_ecs_tilemap_cpu_anim" }
