[package]
name = "bevy_tiled"
description = "A set of useful tools for gluttony to load maps"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy_asset_loader = { workspace = true, features = ["stageless", "dynamic_assets"] }
anyhow = { workspace = true }
thiserror = "1"
serde = { workspace = true }
serde_json = "1"
bevy = { workspace = true }
bevy_ecs_tilemap = { workspace = true }
tiled = { workspace = true }
bevy_ecs_tilemap_cpu_anim = { path = "../bevy_ecs_tilemap_cpu_anim" }
