[package]
name = "native-launcher"
version = "0.1.0"
edition = "2021"
workspace = "../.."

[dependencies]
project-dice-escape = { package = "project-dice-escape", path = "../.." }
bevy = "0.8"
image = "0.24.3"
winit = { version = "0.26.1", default-features = false }
clap = { version = "4", features = ["cargo", "derive"] }
bevy_mod_debugdump = "0.5"
