[package]
name = "native-launcher"
version = "0.1.0"
edition = "2021"
workspace = "../.."

[dependencies]
game-lib = { package = "game-lib", path = "../.." }
bevy = { workspace = true }
image = "0.24.5"
winit = { version = "0.26.1", default-features = false }
clap = { version = "4", features = ["cargo", "derive"] }
bevy_mod_debugdump = "0.5"
