[package]
name = "wasm-launcher"
version = "0.1.0"
edition = "2021"
workspace = "../.."

[dependencies]
game-lib = { package = "game-lib", path = "../.." }
bevy = { workspace = true }
web-sys = { version="0.3.60", features=["Document", "Window"] }
yew = "0.19.3"
stylist = { version= "0.10.1", features=["yew_integration"] }